[gd_scene load_steps=31 format=3 uid="uid://c5p3akujvmitw"]

[ext_resource type="Script" uid="uid://bo7cdxcjy6i7i" path="res://Entity/主角/entity_2.gd" id="1_aedmp"]
[ext_resource type="Texture2D" uid="uid://domlvvs4mv48i" path="res://Entity/主角/主角.png" id="2_uhjsk"]
[ext_resource type="Shader" uid="uid://clp8hn51js7q0" path="res://Shader/受击.gdshader" id="2_xethj"]
[ext_resource type="Script" uid="uid://twsbkr63b21g" path="res://GDBase/Move/Input/move_gravity_by_input_component.gd" id="3_kohgm"]
[ext_resource type="Script" uid="uid://v4uwxotregtq" path="res://GDBase/Health/health_component.gd" id="5_v6kgo"]
[ext_resource type="PackedScene" uid="uid://dssccalehutiv" path="res://GDBase/CellProgressBar/cells_progress_bar.tscn" id="6_ajqgl"]
[ext_resource type="Texture2D" uid="uid://1yfmn2voamr8" path="res://Entity/主角/主角-攻击_1.png" id="7_qjlo7"]
[ext_resource type="Script" uid="uid://iubl2fg1wf6e" path="res://Entity/攻击区.gd" id="9_neb7i"]
[ext_resource type="PackedScene" uid="uid://o8oiohshndjo" path="res://GDBase/ui/技能按钮_2.tscn" id="13_uhjsk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_neb7i"]
shader = ExtResource("2_xethj")
shader_parameter/is_hit = false
shader_parameter/qiang_hua = 0.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxyjl"]
size = Vector2(14, 28)

[sub_resource type="Curve" id="Curve_h2qjg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_boq8c"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_8a2w1"]
atlas = ExtResource("7_qjlo7")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_xethj"]
atlas = ExtResource("7_qjlo7")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_neb7i"]
atlas = ExtResource("7_qjlo7")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcxbn"]
atlas = ExtResource("7_qjlo7")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_aedmp"]
atlas = ExtResource("7_qjlo7")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhjsk"]
atlas = ExtResource("7_qjlo7")
region = Rect2(864, 0, 144, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_m75f7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a2w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xethj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neb7i")
}],
"loop": false,
"name": &"a_1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcxbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aedmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhjsk")
}],
"loop": false,
"name": &"a_2",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_8a2w1"]
script/source = "#extends AnimatedSprite2D
extends 职业
"

[sub_resource type="Animation" id="Animation_xethj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("剑2:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("剑2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("剑2/攻击区/攻击_1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("剑2/攻击区/攻击_2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8a2w1"]
resource_name = "攻击_1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("剑2:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"a_1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("剑2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("剑2/攻击区/攻击_1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.23333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_neb7i"]
resource_name = "攻击_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("剑2/攻击区/攻击_2:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("剑2:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"a_2"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("剑2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xcxbn"]
_data = {
&"RESET": SubResource("Animation_xethj"),
&"攻击_1": SubResource("Animation_8a2w1"),
&"攻击_2": SubResource("Animation_neb7i")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcxbn"]
size = Vector2(52, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aedmp"]
size = Vector2(55, 42)

[sub_resource type="Animation" id="Animation_xcxbn"]
resource_name = "受击"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("主角:material:shader_parameter/is_hit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.23333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("主角:material:shader_parameter/qiang_hua")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_aedmp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("主角:material:shader_parameter/is_hit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("主角:material:shader_parameter/qiang_hua")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhjsk"]
_data = {
&"RESET": SubResource("Animation_aedmp"),
&"受击": SubResource("Animation_xcxbn")
}

[node name="Entity_2" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource("1_aedmp")

[node name="主角" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_neb7i")
position = Vector2(0, -2)
texture = ExtResource("2_uhjsk")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -5)
shape = SubResource("RectangleShape2D_sxyjl")

[node name="MoveGravityByInput" type="Node" parent="." node_paths=PackedStringArray("mover")]
script = ExtResource("3_kohgm")
mover = NodePath("..")
gravity = 16.0
jump_power = 256.0
max_jump_num = 2
jump_num = 2
empty_jump_time = 1.0
dash_time = 0.2
dash_speed = 512.0
time_faster = 0.2
time_slower = 0.2
faster_curve = SubResource("Curve_h2qjg")
slower_curve = SubResource("Curve_boq8c")

[node name="HealthComponent" type="Area2D" parent="."]
position = Vector2(1, -5)
collision_layer = 2
collision_mask = 0
script = ExtResource("5_v6kgo")
max_health = 3
current_health = 3
is_hited_with_invulnerable = true
hitd_invulnerable_time = 1.0
metadata/_custom_type_script = "uid://v4uwxotregtq"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("RectangleShape2D_sxyjl")

[node name="CellsProgressBar" parent="HealthComponent" node_paths=PackedStringArray("health_component") instance=ExtResource("6_ajqgl")]
position = Vector2(-12, 10)
health_component = NodePath("..")
max_cells_num = 3
current_cells_num = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -302.0
offset_top = -84.0
offset_right = -18.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 2

[node name="技能按钮" parent="CanvasLayer/HBoxContainer" instance=ExtResource("13_uhjsk")]
layout_mode = 2
"按键" = ""
"冷却值" = -6236.27428532217

[node name="技能按钮2" parent="CanvasLayer/HBoxContainer" instance=ExtResource("13_uhjsk")]
layout_mode = 2
"按键" = ""
"冷却值" = -6236.27428532217

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -74.0
offset_right = 302.0
offset_bottom = -16.0
grow_vertical = 0
scale = Vector2(0.8, 0.8)
theme_override_constants/separation = 20

[node name="技能按钮" parent="CanvasLayer/HBoxContainer2" instance=ExtResource("13_uhjsk")]
layout_mode = 2
"按键" = ""
"冷却值" = -6236.27428532217

[node name="技能按钮2" parent="CanvasLayer/HBoxContainer2" instance=ExtResource("13_uhjsk")]
layout_mode = 2
"按键" = ""
"冷却值" = -6236.27428532217

[node name="技能按钮3" parent="CanvasLayer/HBoxContainer2" instance=ExtResource("13_uhjsk")]
layout_mode = 2
"按键" = ""
"冷却值" = -6236.27428532217

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="剑2" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("animationPlayer")]
sprite_frames = SubResource("SpriteFrames_m75f7")
script = SubResource("GDScript_8a2w1")
animationPlayer = NodePath("剑")
"_普攻" = Array[String](["攻击_1", "攻击_2"])

[node name="剑" type="AnimationPlayer" parent="剑2"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_xcxbn")
}

[node name="攻击区" type="Area2D" parent="剑2"]
collision_layer = 0
collision_mask = 4
script = ExtResource("9_neb7i")

[node name="攻击_1" type="CollisionShape2D" parent="剑2/攻击区"]
position = Vector2(16, -6.5)
shape = SubResource("RectangleShape2D_xcxbn")
disabled = true

[node name="攻击_2" type="CollisionShape2D" parent="剑2/攻击区"]
position = Vector2(17.5, -6)
shape = SubResource("RectangleShape2D_aedmp")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uhjsk")
}

[connection signal="转向" from="MoveGravityByInput" to="." method="_on_move_gravity_by_input_转向"]
[connection signal="health_delta_applied" from="HealthComponent" to="." method="_on_health_component_health_delta_applied"]
[connection signal="hited" from="HealthComponent" to="." method="_on_health_component_hited"]
